# azure-sdk-for-python

./: .checkignore  .coveagerc  .coveragerc  .docsettings.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .sscignore  .travis.yml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  CONTRIBUTING_HI.md  ChangeLog.md  ChangeLog.rst  ChangeLog.txt  Contributing.md  DUPLICATE_QUERIES_FIX_SUMMARY.md  Dockerfile  GETTING-STARTED-AUTOMATION.md  Gemfile  HISTORY.rst  HOWTO.txt  IMPLEMENTATION-SUMMARY.md  INSTALL.md  LICENSE  LICENSE_VS2010SHELL.txt  MANIFEST.in  NOTICE.txt  OUTPUT_PATH_FIX_SUMMARY.md  Pipfile  Python3.5_packages.md  README  README.md  README.rst  Rakefile  Readme.txt  (+437 more)
eng/tools/azure-sdk-tools/: MANIFEST.in  README.md  changelog_generics.md  changelog_generics.rst  dev_requirements.txt  pyproject.toml
sdk/agentserver/azure-ai-agentserver/: CHANGELOG.md  MANIFEST.in  README.md  agentserver-design.md  cspell.json  dev_requirements.txt  pyproject.toml  pyrightconfig.json
sdk/agentserver/azure-ai-agentserver-agentframework/: CHANGELOG.md  MANIFEST.in  README.md  cspell.json  dev_requirements.txt  mypy.ini  pyproject.toml  pyrightconfig.json
sdk/agentserver/azure-ai-agentserver-core/: CHANGELOG.md  MANIFEST.in  MigrationGuide.md  README.md  api.md  cspell.json  dev_requirements.txt  pyproject.toml  pyrightconfig.json
sdk/agentserver/azure-ai-agentserver-githubcopilot/: .foundry-agent.json  CHANGELOG.md  INSTRUCTIONS.md  README.md  dev_requirements.txt  pyproject.toml
sdk/agentserver/azure-ai-agentserver-invocations/: CHANGELOG.md  MANIFEST.in  README.md  api.md  cspell.json  dev_requirements.txt  pyproject.toml  pyrightconfig.json
sdk/agentserver/azure-ai-agentserver-langgraph/: CHANGELOG.md  MANIFEST.in  README.md  cspell.json  dev_requirements.txt  mypy.ini  pyproject.toml  pyrightconfig.json
sdk/agentserver/azure-ai-agentserver-responses/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  api.md  cspell.json  dev_requirements.txt  mypy.ini  pyproject.toml
sdk/agentserver/azure-ai-responses-server/: Makefile  pyproject.toml
sdk/agrifood/azure-agrifood-farming/: CHANGELOG.md  MANIFEST.in  README.md  assets.json  dev_requirements.txt  pyproject.toml  sdk_packaging.toml  setup.py
sdk/ai/azure-ai-agents/: CHANGELOG.md  FunctionTool.md  MANIFEST.in  README.md  _metadata.json  api.md  apiview-properties.json  assets.json  azure_ai_agents_tests.env  cspell.json  dev_requirements.txt  pyproject.toml  pyrightconfig.json  samples  setup.py  tsp-location.yaml
sdk/ai/azure-ai-agentserver-agentframework/: MANIFEST.in  README.md  cspell.json  dev_requirements.txt  pyproject.toml
sdk/ai/azure-ai-agentserver-core/: CHANGELOG.md  README.md  cspell.json  dev_requirements.txt  pyproject.toml
sdk/ai/azure-ai-agentserver-langgraph/: README.md  cspell.json  dev_requirements.txt  pyproject.toml  pyrightconfig.json
sdk/ai/azure-ai-inference/: CHANGELOG.md  MANIFEST.in  README.md  apiview-properties.json  assets.json  cspell.json  dev_requirements.txt  pyproject.toml  setup.py  temp.py  temp2.py  temp3.py  tsp-location.yaml
sdk/ai/azure-ai-voicelive/: .env.template  CHANGELOG.md  MANIFEST.in  README.md  apiview-properties.json  assets.json  cspell.json  dev_requirements.txt  pyproject.toml  setup.py  test-resources.json  tests.yml  tsp-location.yaml
sdk/anomalydetector/azure-ai-anomalydetector/: CHANGELOG.md  MANIFEST.in  README.md  _meta.json  assets.json  migration_guide.md  pyproject.toml  sdk_packaging.toml  setup.py  tsp-location.yaml
sdk/appconfiguration/azure-appconfiguration/: CHANGELOG.md  HISTORY.md  MANIFEST.in  README.md  TROUBLESHOOTING.md  _metadata.json  api.md  apiview-properties.json  assets.json  dev_requirements.txt  mypy.ini  pyproject.toml  sdk_packaging.toml  setup.py  tsp-location.yaml
sdk/appconfiguration/azure-appconfiguration-provider/: CHANGELOG.md  MANIFEST.in  README.md  api.md  assets.json  dev_requirements.txt  mypy.ini  pyproject.toml  sdk_packaging.toml  setup.py  tests.yml
sdk/appservice/azure-mgmt-web/: CHANGELOG.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  _meta.json  _metadata.json  api.md  apiview-properties.json  pyproject.toml  sdk_packaging.toml  setup.py  tsp-location.yaml
sdk/batch/azure-batch/: CHANGELOG.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  _metadata.json  api.md  apiview-properties.json  assets.json  dev_requirements.txt  migration_guide.md  pyproject.toml  sdk_packaging.toml  setup.py  tox.ini  tsp-location.yaml
sdk/cdn/azure-mgmt-cdn/: CHANGELOG.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  _meta.json  _metadata.json  api.md  apiview-properties.json  assets.json  azure_mgmt_cdn-3.1.0-py2.py3-none-any.whl  code-model-v4-no-tags.yaml  code_report_swagger.json  code_report_typespec.json  dev_requirements.txt  pyproject.toml  sdk_packaging.toml  setup.py  tsp-location.yaml
sdk/cognitivelanguage/azure-ai-language-questionanswering-authoring/: CHANGELOG.md  MANIFEST.in  README.md  api.md  apiview-properties.json  assets.json  dev_requirements.txt  migration_guide_authoring.md  pyproject.toml  sdk_packaging.toml  setup.py  tsp-location.yaml
sdk/cognitiveservices/azure-cognitiveservices-personalizer/: CHANGELOG.md  HISTORY.rst  MANIFEST.in  README.md  README.rst  azure_cognitiveservices_personalizer-0.1.0-py2.py3-none-any.whl  pyproject.toml  sdk_packaging.toml  setup.py
sdk/communication/azure-communication-chat/: CHANGELOG.md  MANIFEST.in  README.md  _api_versions.py  api.md  assets.json  dev_requirements.txt  pyproject.toml  sdk_packaging.toml  setup.py  tests.yml
sdk/communication/azure-communication-messages/: CHANGELOG.md  MANIFEST.in  README.md  api.md  apiview-properties.json  assets.json  dev_requirements.txt  mypy.ini  pyproject.toml  pytest.ini  sdk_packaging.toml  setup.py  tests.yml  tsp-location.yaml
sdk/communication/azure-communication-phonenumbers/: CHANGELOG.md  MANIFEST.in  README.md  api.md  assets.json  azure_communication_phonenumbers-1.0.0b4-py2.py3-none-any.whl  dev_requirements.txt  fhl.txt  setup.cfg  (+5 more)
(+181480 files in other folders)
