[tool.poetry]
name = "sdk-for-python"
version = "1.0.0"
description = "The azure-sdk-for-python leverages poetry to validate its dependency tree."
authors = ["scbedd <45376673+scbedd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7 || >=3.6"
azure-mgmt-advisor = {path = "sdk/advisor/azure-mgmt-advisor"}
azure-mgmt-devspaces = {path = "sdk/aks/azure-mgmt-devspaces"}
azure-mgmt-alertsmanagement = {path = "sdk/alertsmanagement/azure-mgmt-alertsmanagement"}
azure-ai-anomalydetector = {path = "sdk/anomalydetector/azure-ai-anomalydetector"}
azure-mgmt-apimanagement = {path = "sdk/apimanagement/azure-mgmt-apimanagement"}
azure-appconfiguration = {path = "sdk/appconfiguration/azure-appconfiguration"}
azure-mgmt-appconfiguration = {path = "sdk/appconfiguration/azure-mgmt-appconfiguration"}
azure-applicationinsights = {path = "sdk/applicationinsights/azure-applicationinsights"}
azure-mgmt-applicationinsights = {path = "sdk/applicationinsights/azure-mgmt-applicationinsights"}
azure-mgmt-appplatform = {path = "sdk/appplatform/azure-mgmt-appplatform"}
azure-mgmt-web = {path = "sdk/appservice/azure-mgmt-web"}
azure-mgmt-attestation = {path = "sdk/attestation/azure-mgmt-attestation"}
azure-security-attestation = {path = "sdk/attestation/azure-security-attestation"}
azure-mgmt-authorization = {path = "sdk/authorization/azure-mgmt-authorization"}
azure-mgmt-automanage = {path = "sdk/automanage/azure-mgmt-automanage"}
azure-mgmt-automation = {path = "sdk/automation/azure-mgmt-automation"}
azure-mgmt-azureadb2c = {path = "sdk/azureadb2c/azure-mgmt-azureadb2c"}
azure-mgmt-azurestack = {path = "sdk/azurestack/azure-mgmt-azurestack"}
azure-mgmt-azurestackhci = {path = "sdk/azurestackhci/azure-mgmt-azurestackhci"}
azure-mgmt-baremetalinfrastructure = {path = "sdk/baremetalinfrastructure/azure-mgmt-baremetalinfrastructure"}
azure-batch = {path = "sdk/batch/azure-batch"}
azure-mgmt-batch = {path = "sdk/batch/azure-mgmt-batch"}
azure-mgmt-billing = {path = "sdk/billing/azure-mgmt-billing"}
azure-mgmt-botservice = {path = "sdk/botservice/azure-mgmt-botservice"}
azure-mgmt-cdn = {path = "sdk/cdn/azure-mgmt-cdn"}
azure-cognitiveservices-anomalydetector = {path = "sdk/cognitiveservices/azure-cognitiveservices-anomalydetector"}
azure-cognitiveservices-formrecognizer = {path = "sdk/cognitiveservices/azure-cognitiveservices-formrecognizer"}
azure-cognitiveservices-knowledge-nspkg = {path = "sdk/cognitiveservices/azure-cognitiveservices-knowledge-nspkg"}
azure-cognitiveservices-knowledge-qnamaker = {path = "sdk/cognitiveservices/azure-cognitiveservices-knowledge-qnamaker"}
azure-cognitiveservices-language-luis = {path = "sdk/cognitiveservices/azure-cognitiveservices-language-luis"}
azure-cognitiveservices-language-nspkg = {path = "sdk/cognitiveservices/azure-cognitiveservices-language-nspkg"}
azure-cognitiveservices-language-spellcheck = {path = "sdk/cognitiveservices/azure-cognitiveservices-language-spellcheck"}
azure-cognitiveservices-language-textanalytics = {path = "sdk/cognitiveservices/azure-cognitiveservices-language-textanalytics"}
azure-cognitiveservices-nspkg = {path = "sdk/cognitiveservices/azure-cognitiveservices-nspkg"}
azure-cognitiveservices-personalizer = {path = "sdk/cognitiveservices/azure-cognitiveservices-personalizer"}
azure-cognitiveservices-search-autosuggest = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-autosuggest"}
azure-cognitiveservices-search-customimagesearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-customimagesearch"}
azure-cognitiveservices-search-customsearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-customsearch"}
azure-cognitiveservices-search-entitysearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-entitysearch"}
azure-cognitiveservices-search-imagesearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-imagesearch"}
azure-cognitiveservices-search-newssearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-newssearch"}
azure-cognitiveservices-search-nspkg = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-nspkg"}
azure-cognitiveservices-search-videosearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-videosearch"}
azure-cognitiveservices-search-visualsearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-visualsearch"}
azure-cognitiveservices-search-websearch = {path = "sdk/cognitiveservices/azure-cognitiveservices-search-websearch"}
azure-cognitiveservices-vision-computervision = {path = "sdk/cognitiveservices/azure-cognitiveservices-vision-computervision"}
azure-cognitiveservices-vision-contentmoderator = {path = "sdk/cognitiveservices/azure-cognitiveservices-vision-contentmoderator"}
azure-cognitiveservices-vision-customvision = {path = "sdk/cognitiveservices/azure-cognitiveservices-vision-customvision"}
azure-cognitiveservices-vision-face = {path = "sdk/cognitiveservices/azure-cognitiveservices-vision-face"}
azure-cognitiveservices-vision-nspkg = {path = "sdk/cognitiveservices/azure-cognitiveservices-vision-nspkg"}
azure-mgmt-cognitiveservices = {path = "sdk/cognitiveservices/azure-mgmt-cognitiveservices"}
azure-mgmt-commerce = {path = "sdk/commerce/azure-mgmt-commerce"}
azure-communication-chat = {path = "sdk/communication/azure-communication-chat"}
azure-communication-identity = {path = "sdk/communication/azure-communication-identity"}
azure-communication-nspkg = {path = "sdk/communication/azure-communication-nspkg"}
azure-communication-phonenumbers = {path = "sdk/communication/azure-communication-phonenumbers"}
azure-communication-sms = {path = "sdk/communication/azure-communication-sms"}
azure-mgmt-communication = {path = "sdk/communication/azure-mgmt-communication"}
azure-mgmt-compute = {path = "sdk/compute/azure-mgmt-compute"}
azure-mgmt-imagebuilder = {path = "sdk/compute/azure-mgmt-imagebuilder"}
azure-mgmt-vmwarecloudsimple = {path = "sdk/compute/azure-mgmt-vmwarecloudsimple"}
azure-mgmt-confluent = {path = "sdk/confluent/azure-mgmt-confluent"}
azure-mgmt-consumption = {path = "sdk/consumption/azure-mgmt-consumption"}
azure-mgmt-containerinstance = {path = "sdk/containerinstance/azure-mgmt-containerinstance"}
azure-containerregistry = {path = "sdk/containerregistry/azure-containerregistry"}
azure-mgmt-containerregistry = {path = "sdk/containerregistry/azure-mgmt-containerregistry"}
azure-mgmt-containerservice = {path = "sdk/containerservice/azure-mgmt-containerservice"}
azure-common = {path = "sdk/core/azure-common"}
azure-core = {path = "sdk/core/azure-core"}
azure-core-tracing-opencensus = {path = "sdk/core/azure-core-tracing-opencensus"}
azure-core-tracing-opentelemetry = {path = "sdk/core/azure-core-tracing-opentelemetry", python = ">=3.6"}
azure-mgmt-core = {path = "sdk/core/azure-mgmt-core"}
azure-mgmt-datalake-nspkg = {path = "sdk/core/azure-mgmt-datalake-nspkg"}
azure-mgmt-nspkg = {path = "sdk/core/azure-mgmt-nspkg"}
azure-cosmos = {path = "sdk/cosmos/azure-cosmos"}
azure-mgmt-cosmosdb = {path = "sdk/cosmos/azure-mgmt-cosmosdb"}
azure-mgmt-documentdb = {path = "sdk/cosmos/azure-mgmt-documentdb"}
azure-mgmt-costmanagement = {path = "sdk/costmanagement/azure-mgmt-costmanagement"}
azure-mgmt-customproviders = {path = "sdk/customproviders/azure-mgmt-customproviders"}
azure-mgmt-databox = {path = "sdk/databox/azure-mgmt-databox"}
azure-mgmt-databoxedge = {path = "sdk/databoxedge/azure-mgmt-databoxedge"}
azure-mgmt-databricks = {path = "sdk/databricks/azure-mgmt-databricks"}
azure-mgmt-datadog = {path = "sdk/datadog/azure-mgmt-datadog"}
azure-mgmt-datafactory = {path = "sdk/datafactory/azure-mgmt-datafactory"}
azure-mgmt-datalake-analytics = {path = "sdk/datalake/azure-mgmt-datalake-analytics"}
azure-mgmt-datalake-store = {path = "sdk/datalake/azure-mgmt-datalake-store"}
azure-mgmt-datamigration = {path = "sdk/datamigration/azure-mgmt-datamigration"}
azure-mgmt-datashare = {path = "sdk/datashare/azure-mgmt-datashare"}
azure-mgmt-deploymentmanager = {path = "sdk/deploymentmanager/azure-mgmt-deploymentmanager"}
azure-iot-deviceupdate = {path = "sdk/deviceupdate/azure-iot-deviceupdate"}
azure-mgmt-deviceupdate = {path = "sdk/deviceupdate/azure-mgmt-deviceupdate"}
azure-mgmt-devtestlabs = {path = "sdk/devtestlabs/azure-mgmt-devtestlabs"}
azure-digitaltwins-core = {path = "sdk/digitaltwins/azure-digitaltwins-core"}
azure-digitaltwins-nspkg = {path = "sdk/digitaltwins/azure-digitaltwins-nspkg"}
azure-mgmt-digitaltwins = {path = "sdk/digitaltwins/azure-mgmt-digitaltwins"}
azure-ai-documenttranslation = {path = "sdk/documenttranslation/azure-ai-documenttranslation"}
azure-mgmt-edgegateway = {path = "sdk/edgegateway/azure-mgmt-edgegateway"}
azure-eventgrid = {path = "sdk/eventgrid/azure-eventgrid"}
azure-mgmt-eventgrid = {path = "sdk/eventgrid/azure-mgmt-eventgrid"}
azure-eventhub = {path = "sdk/eventhub/azure-eventhub"}
azure-eventhub-checkpointstoreblob = {path = "sdk/eventhub/azure-eventhub-checkpointstoreblob"}
azure-eventhub-checkpointstoreblob-aio = {path = "sdk/eventhub/azure-eventhub-checkpointstoreblob-aio", python = ">=3.6"}
azure-mgmt-eventhub = {path = "sdk/eventhub/azure-mgmt-eventhub"}
azure-mgmt-extendedlocation = {path = "sdk/extendedlocation/azure-mgmt-extendedlocation"}
azure-ai-formrecognizer = {path = "sdk/formrecognizer/azure-ai-formrecognizer"}
azure-graphrbac = {path = "sdk/graphrbac/azure-graphrbac"}
azure-mgmt-hanaonazure = {path = "sdk/hanaonazure/azure-mgmt-hanaonazure"}
azure-mgmt-hdinsight = {path = "sdk/hdinsight/azure-mgmt-hdinsight"}
azure-mgmt-healthbot = {path = "sdk/healthbot/azure-mgmt-healthbot"}
azure-mgmt-healthcareapis = {path = "sdk/healthcareapis/azure-mgmt-healthcareapis"}
azure-mgmt-hybridcompute = {path = "sdk/hybridcompute/azure-mgmt-hybridcompute"}
azure-mgmt-hybridkubernetes = {path = "sdk/hybridkubernetes/azure-mgmt-hybridkubernetes"}
azure-identity = {path = "sdk/identity/azure-identity"}
azure-iot-nspkg = {path = "sdk/iot/azure-iot-nspkg"}
azure-mgmt-iotcentral = {path = "sdk/iothub/azure-mgmt-iotcentral"}
azure-mgmt-iothub = {path = "sdk/iothub/azure-mgmt-iothub"}
azure-mgmt-iothubprovisioningservices = {path = "sdk/iothub/azure-mgmt-iothubprovisioningservices"}
azure-keyvault = {path = "sdk/keyvault/azure-keyvault"}
azure-keyvault-administration = {path = "sdk/keyvault/azure-keyvault-administration"}
azure-keyvault-certificates = {path = "sdk/keyvault/azure-keyvault-certificates"}
azure-keyvault-keys = {path = "sdk/keyvault/azure-keyvault-keys"}
azure-keyvault-nspkg = {path = "sdk/keyvault/azure-keyvault-nspkg"}
azure-keyvault-secrets = {path = "sdk/keyvault/azure-keyvault-secrets"}
azure-mgmt-keyvault = {path = "sdk/keyvault/azure-mgmt-keyvault"}
azure-mgmt-kubernetesconfiguration = {path = "sdk/kubernetesconfiguration/azure-mgmt-kubernetesconfiguration"}
azure-mgmt-kusto = {path = "sdk/kusto/azure-mgmt-kusto"}
azure-mgmt-labservices = {path = "sdk/labservices/azure-mgmt-labservices"}
azure-loganalytics = {path = "sdk/loganalytics/azure-loganalytics"}
azure-mgmt-loganalytics = {path = "sdk/loganalytics/azure-mgmt-loganalytics"}
azure-mgmt-logic = {path = "sdk/logic/azure-mgmt-logic"}
azure-mgmt-machinelearningcompute = {path = "sdk/machinelearning/azure-mgmt-machinelearningcompute"}
azure-mgmt-machinelearningservices = {path = "sdk/machinelearning/azure-mgmt-machinelearningservices"}
azure-mgmt-maintenance = {path = "sdk/maintenance/azure-mgmt-maintenance"}
azure-mgmt-managedservices = {path = "sdk/managedservices/azure-mgmt-managedservices"}
azure-mgmt-managementgroups = {path = "sdk/managementgroups/azure-mgmt-managementgroups"}
azure-mgmt-managementpartner = {path = "sdk/managementpartner/azure-mgmt-managementpartner"}
azure-mgmt-maps = {path = "sdk/maps/azure-mgmt-maps"}
azure-mgmt-marketplaceordering = {path = "sdk/marketplaceordering/azure-mgmt-marketplaceordering"}
azure-media-analytics-edge = {path = "sdk/media/azure-media-analytics-edge"}
azure-media-nspkg = {path = "sdk/media/azure-media-nspkg"}
azure-mgmt-media = {path = "sdk/media/azure-mgmt-media"}
azure-ai-metricsadvisor = {path = "sdk/metricsadvisor/azure-ai-metricsadvisor"}
azure-mgmt-mixedreality = {path = "sdk/mixedreality/azure-mgmt-mixedreality"}
azure-mixedreality-authentication = {path = "sdk/mixedreality/azure-mixedreality-authentication"}
azure-mixedreality-nspkg = {path = "sdk/mixedreality/azure-mixedreality-nspkg"}
azure-mgmt-monitor = {path = "sdk/monitor/azure-mgmt-monitor"}
azure-mgmt-netapp = {path = "sdk/netapp/azure-mgmt-netapp"}
azure-mgmt-dns = {path = "sdk/network/azure-mgmt-dns"}
azure-mgmt-frontdoor = {path = "sdk/network/azure-mgmt-frontdoor"}
azure-mgmt-network = {path = "sdk/network/azure-mgmt-network"}
azure-mgmt-privatedns = {path = "sdk/network/azure-mgmt-privatedns"}
azure-mgmt-notificationhubs = {path = "sdk/notificationhubs/azure-mgmt-notificationhubs"}
azure-mgmt-operationsmanagement = {path = "sdk/operationsmanagement/azure-mgmt-operationsmanagement"}
azure-mgmt-peering = {path = "sdk/peering/azure-mgmt-peering"}
azure-mgmt-policyinsights = {path = "sdk/policyinsights/azure-mgmt-policyinsights"}
azure-mgmt-portal = {path = "sdk/portal/azure-mgmt-portal"}
azure-mgmt-powerbidedicated = {path = "sdk/powerbidedicated/azure-mgmt-powerbidedicated"}
azure-mgmt-powerbiembedded = {path = "sdk/powerbiembedded/azure-mgmt-powerbiembedded"}
azure-mgmt-purview = {path = "sdk/purview/azure-mgmt-purview"}
azure-mgmt-quantum = {path = "sdk/quantum/azure-mgmt-quantum"}
azure-mgmt-rdbms = {path = "sdk/rdbms/azure-mgmt-rdbms"}
azure-mgmt-recoveryservices = {path = "sdk/recoveryservices/azure-mgmt-recoveryservices"}
azure-mgmt-recoveryservicesbackup = {path = "sdk/recoveryservices/azure-mgmt-recoveryservicesbackup"}
azure-mgmt-redhatopenshift = {path = "sdk/redhatopenshift/azure-mgmt-redhatopenshift"}
azure-mgmt-redis = {path = "sdk/redis/azure-mgmt-redis"}
azure-mgmt-redisenterprise = {path = "sdk/redisenterprise/azure-mgmt-redisenterprise"}
azure-mgmt-regionmove = {path = "sdk/regionmove/azure-mgmt-regionmove"}
azure-mgmt-relay = {path = "sdk/relay/azure-mgmt-relay"}
azure-mgmt-reservations = {path = "sdk/reservations/azure-mgmt-reservations"}
azure-mgmt-resourcemover = {path = "sdk/resourcemover/azure-mgmt-resourcemover"}
azure-mgmt-msi = {path = "sdk/resources/azure-mgmt-msi"}
azure-mgmt-resource = {path = "sdk/resources/azure-mgmt-resource"}
azure-mgmt-resourcegraph = {path = "sdk/resources/azure-mgmt-resourcegraph"}
azure-mgmt-scheduler = {path = "sdk/scheduler/azure-mgmt-scheduler"}
azure-schemaregistry = {path = "sdk/schemaregistry/azure-schemaregistry"}
azure-mgmt-search = {path = "sdk/search/azure-mgmt-search"}
azure-search-documents = {path = "sdk/search/azure-search-documents"}
azure-search-nspkg = {path = "sdk/search/azure-search-nspkg"}
azure-mgmt-security = {path = "sdk/security/azure-mgmt-security"}
azure-security-nspkg = {path = "sdk/security/azure-security-nspkg"}
azure-mgmt-securityinsight = {path = "sdk/securityinsight/azure-mgmt-securityinsight"}
azure-mgmt-serialconsole = {path = "sdk/serialconsole/azure-mgmt-serialconsole"}
azure-mgmt-servermanager = {path = "sdk/servermanager/azure-mgmt-servermanager"}
azure-mgmt-servicebus = {path = "sdk/servicebus/azure-mgmt-servicebus"}
azure-servicebus = {path = "sdk/servicebus/azure-servicebus"}
azure-mgmt-servicefabric = {path = "sdk/servicefabric/azure-mgmt-servicefabric"}
azure-servicefabric = {path = "sdk/servicefabric/azure-servicefabric"}
azure-mgmt-servicefabricmanagedclusters = {path = "sdk/servicefabricmanagedclusters/azure-mgmt-servicefabricmanagedclusters"}
azure-mgmt-signalr = {path = "sdk/signalr/azure-mgmt-signalr"}
azure-mgmt-sql = {path = "sdk/sql/azure-mgmt-sql"}
azure-mgmt-sqlvirtualmachine = {path = "sdk/sql/azure-mgmt-sqlvirtualmachine"}
azure-mgmt-storage = {path = "sdk/storage/azure-mgmt-storage"}
azure-mgmt-storagecache = {path = "sdk/storage/azure-mgmt-storagecache"}
azure-mgmt-storageimportexport = {path = "sdk/storage/azure-mgmt-storageimportexport"}
azure-mgmt-storagesync = {path = "sdk/storage/azure-mgmt-storagesync"}
azure-storage-blob = {path = "sdk/storage/azure-storage-blob"}
azure-storage-blob-changefeed = {path = "sdk/storage/azure-storage-blob-changefeed"}
azure-storage-file-datalake = {path = "sdk/storage/azure-storage-file-datalake"}
azure-storage-file-share = {path = "sdk/storage/azure-storage-file-share"}
azure-storage-nspkg = {path = "sdk/storage/azure-storage-nspkg"}
azure-storage-queue = {path = "sdk/storage/azure-storage-queue"}
azure-mgmt-streamanalytics = {path = "sdk/streamanalytics/azure-mgmt-streamanalytics"}
azure-mgmt-subscription = {path = "sdk/subscription/azure-mgmt-subscription"}
azure-mgmt-support = {path = "sdk/support/azure-mgmt-support"}
azure-mgmt-synapse = {path = "sdk/synapse/azure-mgmt-synapse"}
azure-synapse = {path = "sdk/synapse/azure-synapse"}
azure-synapse-accesscontrol = {path = "sdk/synapse/azure-synapse-accesscontrol"}
azure-synapse-artifacts = {path = "sdk/synapse/azure-synapse-artifacts"}
azure-synapse-managedprivateendpoints = {path = "sdk/synapse/azure-synapse-managedprivateendpoints"}
azure-synapse-monitoring = {path = "sdk/synapse/azure-synapse-monitoring"}
azure-synapse-nspkg = {path = "sdk/synapse/azure-synapse-nspkg"}
azure-synapse-spark = {path = "sdk/synapse/azure-synapse-spark"}
azure-data-tables = {path = "sdk/tables/azure-data-tables"}
azure-template = {path = "sdk/template/azure-template"}
azure-ai-textanalytics = {path = "sdk/textanalytics/azure-ai-textanalytics"}
azure-mgmt-timeseriesinsights = {path = "sdk/timeseriesinsights/azure-mgmt-timeseriesinsights"}
azure-mgmt-trafficmanager = {path = "sdk/trafficmanager/azure-mgmt-trafficmanager"}
azure-mgmt-workloadmonitor = {path = "sdk/workloadmonitor/azure-mgmt-workloadmonitor"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
