[tool.poetry]
name = "sdk-for-python"
version = "1.0.0"
description = "The azure-sdk-for-python leverages poetry to validate its dependency tree."
authors = ["scbedd <45376673+scbedd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^2.7 || >=3.6"
azure-mgmt-advisor = {develop=true, path = "sdk/advisor/azure-mgmt-advisor"}
azure-mgmt-devspaces = {develop=true, path = "sdk/aks/azure-mgmt-devspaces"}
azure-mgmt-alertsmanagement = {develop=true, path = "sdk/alertsmanagement/azure-mgmt-alertsmanagement"}
azure-ai-anomalydetector = {develop=true, path = "sdk/anomalydetector/azure-ai-anomalydetector"}
azure-mgmt-apimanagement = {develop=true, path = "sdk/apimanagement/azure-mgmt-apimanagement"}
azure-appconfiguration = {develop=true, path = "sdk/appconfiguration/azure-appconfiguration"}
azure-mgmt-appconfiguration = {develop=true, path = "sdk/appconfiguration/azure-mgmt-appconfiguration"}
azure-applicationinsights = {develop=true, path = "sdk/applicationinsights/azure-applicationinsights"}
azure-mgmt-applicationinsights = {develop=true, path = "sdk/applicationinsights/azure-mgmt-applicationinsights"}
azure-mgmt-appplatform = {develop=true, path = "sdk/appplatform/azure-mgmt-appplatform"}
azure-mgmt-web = {develop=true, path = "sdk/appservice/azure-mgmt-web"}
azure-mgmt-attestation = {develop=true, path = "sdk/attestation/azure-mgmt-attestation"}
azure-security-attestation = {develop=true, path = "sdk/attestation/azure-security-attestation"}
azure-mgmt-authorization = {develop=true, path = "sdk/authorization/azure-mgmt-authorization"}
azure-mgmt-automanage = {develop=true, path = "sdk/automanage/azure-mgmt-automanage"}
azure-mgmt-automation = {develop=true, path = "sdk/automation/azure-mgmt-automation"}
azure-mgmt-azureadb2c = {develop=true, path = "sdk/azureadb2c/azure-mgmt-azureadb2c"}
azure-mgmt-azurestack = {develop=true, path = "sdk/azurestack/azure-mgmt-azurestack"}
azure-mgmt-azurestackhci = {develop=true, path = "sdk/azurestackhci/azure-mgmt-azurestackhci"}
azure-mgmt-baremetalinfrastructure = {develop=true, path = "sdk/baremetalinfrastructure/azure-mgmt-baremetalinfrastructure"}
azure-batch = {develop=true, path = "sdk/batch/azure-batch"}
azure-mgmt-batch = {develop=true, path = "sdk/batch/azure-mgmt-batch"}
azure-mgmt-billing = {develop=true, path = "sdk/billing/azure-mgmt-billing"}
azure-mgmt-botservice = {develop=true, path = "sdk/botservice/azure-mgmt-botservice"}
azure-mgmt-cdn = {develop=true, path = "sdk/cdn/azure-mgmt-cdn"}
azure-cognitiveservices-anomalydetector = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-anomalydetector"}
azure-cognitiveservices-formrecognizer = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-formrecognizer"}
azure-cognitiveservices-knowledge-nspkg = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-knowledge-nspkg"}
azure-cognitiveservices-knowledge-qnamaker = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-knowledge-qnamaker"}
azure-cognitiveservices-language-luis = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-language-luis"}
azure-cognitiveservices-language-nspkg = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-language-nspkg"}
azure-cognitiveservices-language-spellcheck = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-language-spellcheck"}
azure-cognitiveservices-language-textanalytics = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-language-textanalytics"}
azure-cognitiveservices-nspkg = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-nspkg"}
azure-cognitiveservices-personalizer = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-personalizer"}
azure-cognitiveservices-search-autosuggest = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-autosuggest"}
azure-cognitiveservices-search-customimagesearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-customimagesearch"}
azure-cognitiveservices-search-customsearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-customsearch"}
azure-cognitiveservices-search-entitysearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-entitysearch"}
azure-cognitiveservices-search-imagesearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-imagesearch"}
azure-cognitiveservices-search-newssearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-newssearch"}
azure-cognitiveservices-search-nspkg = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-nspkg"}
azure-cognitiveservices-search-videosearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-videosearch"}
azure-cognitiveservices-search-visualsearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-visualsearch"}
azure-cognitiveservices-search-websearch = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-search-websearch"}
azure-cognitiveservices-vision-computervision = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-vision-computervision"}
azure-cognitiveservices-vision-contentmoderator = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-vision-contentmoderator"}
azure-cognitiveservices-vision-customvision = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-vision-customvision"}
azure-cognitiveservices-vision-face = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-vision-face"}
azure-cognitiveservices-vision-nspkg = {develop=true, path = "sdk/cognitiveservices/azure-cognitiveservices-vision-nspkg"}
azure-mgmt-cognitiveservices = {develop=true, path = "sdk/cognitiveservices/azure-mgmt-cognitiveservices"}
azure-mgmt-commerce = {develop=true, path = "sdk/commerce/azure-mgmt-commerce"}
azure-communication-chat = {develop=true, path = "sdk/communication/azure-communication-chat"}
azure-communication-identity = {develop=true, path = "sdk/communication/azure-communication-identity"}
azure-communication-nspkg = {develop=true, path = "sdk/communication/azure-communication-nspkg"}
azure-communication-phonenumbers = {develop=true, path = "sdk/communication/azure-communication-phonenumbers"}
azure-communication-sms = {develop=true, path = "sdk/communication/azure-communication-sms"}
azure-mgmt-communication = {develop=true, path = "sdk/communication/azure-mgmt-communication"}
azure-mgmt-compute = {develop=true, path = "sdk/compute/azure-mgmt-compute"}
azure-mgmt-imagebuilder = {develop=true, path = "sdk/compute/azure-mgmt-imagebuilder"}
azure-mgmt-vmwarecloudsimple = {develop=true, path = "sdk/compute/azure-mgmt-vmwarecloudsimple"}
azure-mgmt-confluent = {develop=true, path = "sdk/confluent/azure-mgmt-confluent"}
azure-mgmt-consumption = {develop=true, path = "sdk/consumption/azure-mgmt-consumption"}
azure-mgmt-containerinstance = {develop=true, path = "sdk/containerinstance/azure-mgmt-containerinstance"}
azure-containerregistry = {develop=true, path = "sdk/containerregistry/azure-containerregistry"}
azure-mgmt-containerregistry = {develop=true, path = "sdk/containerregistry/azure-mgmt-containerregistry"}
azure-mgmt-containerservice = {develop=true, path = "sdk/containerservice/azure-mgmt-containerservice"}
azure-common = {develop=true, path = "sdk/core/azure-common"}
azure-core = {develop=true, path = "sdk/core/azure-core"}
azure-core-tracing-opencensus = {develop=true, path = "sdk/core/azure-core-tracing-opencensus"}
azure-core-tracing-opentelemetry = {develop=true, path = "sdk/core/azure-core-tracing-opentelemetry", python = ">=3.6"}
azure-mgmt-core = {develop=true, path = "sdk/core/azure-mgmt-core"}
azure-mgmt-datalake-nspkg = {develop=true, path = "sdk/core/azure-mgmt-datalake-nspkg"}
azure-mgmt-nspkg = {develop=true, path = "sdk/core/azure-mgmt-nspkg"}
azure-cosmos = {develop=true, path = "sdk/cosmos/azure-cosmos"}
azure-mgmt-cosmosdb = {develop=true, path = "sdk/cosmos/azure-mgmt-cosmosdb"}
azure-mgmt-documentdb = {develop=true, path = "sdk/cosmos/azure-mgmt-documentdb"}
azure-mgmt-costmanagement = {develop=true, path = "sdk/costmanagement/azure-mgmt-costmanagement"}
azure-mgmt-customproviders = {develop=true, path = "sdk/customproviders/azure-mgmt-customproviders"}
azure-mgmt-databox = {develop=true, path = "sdk/databox/azure-mgmt-databox"}
azure-mgmt-databoxedge = {develop=true, path = "sdk/databoxedge/azure-mgmt-databoxedge"}
azure-mgmt-databricks = {develop=true, path = "sdk/databricks/azure-mgmt-databricks"}
azure-mgmt-datadog = {develop=true, path = "sdk/datadog/azure-mgmt-datadog"}
azure-mgmt-datafactory = {develop=true, path = "sdk/datafactory/azure-mgmt-datafactory"}
azure-mgmt-datalake-analytics = {develop=true, path = "sdk/datalake/azure-mgmt-datalake-analytics"}
azure-mgmt-datalake-store = {develop=true, path = "sdk/datalake/azure-mgmt-datalake-store"}
azure-mgmt-datamigration = {develop=true, path = "sdk/datamigration/azure-mgmt-datamigration"}
azure-mgmt-datashare = {develop=true, path = "sdk/datashare/azure-mgmt-datashare"}
azure-mgmt-deploymentmanager = {develop=true, path = "sdk/deploymentmanager/azure-mgmt-deploymentmanager"}
azure-iot-deviceupdate = {develop=true, path = "sdk/deviceupdate/azure-iot-deviceupdate"}
azure-mgmt-deviceupdate = {develop=true, path = "sdk/deviceupdate/azure-mgmt-deviceupdate"}
azure-mgmt-devtestlabs = {develop=true, path = "sdk/devtestlabs/azure-mgmt-devtestlabs"}
azure-digitaltwins-core = {develop=true, path = "sdk/digitaltwins/azure-digitaltwins-core"}
azure-digitaltwins-nspkg = {develop=true, path = "sdk/digitaltwins/azure-digitaltwins-nspkg"}
azure-mgmt-digitaltwins = {develop=true, path = "sdk/digitaltwins/azure-mgmt-digitaltwins"}
azure-ai-documenttranslation = {develop=true, path = "sdk/documenttranslation/azure-ai-documenttranslation"}
azure-mgmt-edgegateway = {develop=true, path = "sdk/edgegateway/azure-mgmt-edgegateway"}
azure-eventgrid = {develop=true, path = "sdk/eventgrid/azure-eventgrid"}
azure-mgmt-eventgrid = {develop=true, path = "sdk/eventgrid/azure-mgmt-eventgrid"}
azure-eventhub = {develop=true, path = "sdk/eventhub/azure-eventhub"}
azure-eventhub-checkpointstoreblob = {develop=true, path = "sdk/eventhub/azure-eventhub-checkpointstoreblob"}
azure-eventhub-checkpointstoreblob-aio = {develop=true, path = "sdk/eventhub/azure-eventhub-checkpointstoreblob-aio", python = ">=3.6"}
azure-mgmt-eventhub = {develop=true, path = "sdk/eventhub/azure-mgmt-eventhub"}
azure-mgmt-extendedlocation = {develop=true, path = "sdk/extendedlocation/azure-mgmt-extendedlocation"}
azure-ai-formrecognizer = {develop=true, path = "sdk/formrecognizer/azure-ai-formrecognizer"}
azure-graphrbac = {develop=true, path = "sdk/graphrbac/azure-graphrbac"}
azure-mgmt-hanaonazure = {develop=true, path = "sdk/hanaonazure/azure-mgmt-hanaonazure"}
azure-mgmt-hdinsight = {develop=true, path = "sdk/hdinsight/azure-mgmt-hdinsight"}
azure-mgmt-healthbot = {develop=true, path = "sdk/healthbot/azure-mgmt-healthbot"}
azure-mgmt-healthcareapis = {develop=true, path = "sdk/healthcareapis/azure-mgmt-healthcareapis"}
azure-mgmt-hybridcompute = {develop=true, path = "sdk/hybridcompute/azure-mgmt-hybridcompute"}
azure-mgmt-hybridkubernetes = {develop=true, path = "sdk/hybridkubernetes/azure-mgmt-hybridkubernetes"}
azure-identity = {develop=true, path = "sdk/identity/azure-identity"}
azure-iot-nspkg = {develop=true, path = "sdk/iot/azure-iot-nspkg"}
azure-mgmt-iotcentral = {develop=true, path = "sdk/iothub/azure-mgmt-iotcentral"}
azure-mgmt-iothub = {develop=true, path = "sdk/iothub/azure-mgmt-iothub"}
azure-mgmt-iothubprovisioningservices = {develop=true, path = "sdk/iothub/azure-mgmt-iothubprovisioningservices"}
azure-keyvault = {develop=true, path = "sdk/keyvault/azure-keyvault"}
azure-keyvault-administration = {develop=true, path = "sdk/keyvault/azure-keyvault-administration"}
azure-keyvault-certificates = {develop=true, path = "sdk/keyvault/azure-keyvault-certificates"}
azure-keyvault-keys = {develop=true, path = "sdk/keyvault/azure-keyvault-keys"}
azure-keyvault-nspkg = {develop=true, path = "sdk/keyvault/azure-keyvault-nspkg"}
azure-keyvault-secrets = {develop=true, path = "sdk/keyvault/azure-keyvault-secrets"}
azure-mgmt-keyvault = {develop=true, path = "sdk/keyvault/azure-mgmt-keyvault"}
azure-mgmt-kubernetesconfiguration = {develop=true, path = "sdk/kubernetesconfiguration/azure-mgmt-kubernetesconfiguration"}
azure-mgmt-kusto = {develop=true, path = "sdk/kusto/azure-mgmt-kusto"}
azure-mgmt-labservices = {develop=true, path = "sdk/labservices/azure-mgmt-labservices"}
azure-loganalytics = {develop=true, path = "sdk/loganalytics/azure-loganalytics"}
azure-mgmt-loganalytics = {develop=true, path = "sdk/loganalytics/azure-mgmt-loganalytics"}
azure-mgmt-logic = {develop=true, path = "sdk/logic/azure-mgmt-logic"}
azure-mgmt-machinelearningcompute = {develop=true, path = "sdk/machinelearning/azure-mgmt-machinelearningcompute"}
azure-mgmt-machinelearningservices = {develop=true, path = "sdk/machinelearning/azure-mgmt-machinelearningservices"}
azure-mgmt-maintenance = {develop=true, path = "sdk/maintenance/azure-mgmt-maintenance"}
azure-mgmt-managedservices = {develop=true, path = "sdk/managedservices/azure-mgmt-managedservices"}
azure-mgmt-managementgroups = {develop=true, path = "sdk/managementgroups/azure-mgmt-managementgroups"}
azure-mgmt-managementpartner = {develop=true, path = "sdk/managementpartner/azure-mgmt-managementpartner"}
azure-mgmt-maps = {develop=true, path = "sdk/maps/azure-mgmt-maps"}
azure-mgmt-marketplaceordering = {develop=true, path = "sdk/marketplaceordering/azure-mgmt-marketplaceordering"}
azure-media-analytics-edge = {develop=true, path = "sdk/media/azure-media-analytics-edge"}
azure-media-nspkg = {develop=true, path = "sdk/media/azure-media-nspkg"}
azure-mgmt-media = {develop=true, path = "sdk/media/azure-mgmt-media"}
azure-ai-metricsadvisor = {develop=true, path = "sdk/metricsadvisor/azure-ai-metricsadvisor"}
azure-mgmt-mixedreality = {develop=true, path = "sdk/mixedreality/azure-mgmt-mixedreality"}
azure-mixedreality-authentication = {develop=true, path = "sdk/mixedreality/azure-mixedreality-authentication"}
azure-mixedreality-nspkg = {develop=true, path = "sdk/mixedreality/azure-mixedreality-nspkg"}
azure-mgmt-monitor = {develop=true, path = "sdk/monitor/azure-mgmt-monitor"}
azure-mgmt-netapp = {develop=true, path = "sdk/netapp/azure-mgmt-netapp"}
azure-mgmt-dns = {develop=true, path = "sdk/network/azure-mgmt-dns"}
azure-mgmt-frontdoor = {develop=true, path = "sdk/network/azure-mgmt-frontdoor"}
azure-mgmt-network = {develop=true, path = "sdk/network/azure-mgmt-network"}
azure-mgmt-privatedns = {develop=true, path = "sdk/network/azure-mgmt-privatedns"}
azure-mgmt-notificationhubs = {develop=true, path = "sdk/notificationhubs/azure-mgmt-notificationhubs"}
azure-mgmt-operationsmanagement = {develop=true, path = "sdk/operationsmanagement/azure-mgmt-operationsmanagement"}
azure-mgmt-peering = {develop=true, path = "sdk/peering/azure-mgmt-peering"}
azure-mgmt-policyinsights = {develop=true, path = "sdk/policyinsights/azure-mgmt-policyinsights"}
azure-mgmt-portal = {develop=true, path = "sdk/portal/azure-mgmt-portal"}
azure-mgmt-powerbidedicated = {develop=true, path = "sdk/powerbidedicated/azure-mgmt-powerbidedicated"}
azure-mgmt-powerbiembedded = {develop=true, path = "sdk/powerbiembedded/azure-mgmt-powerbiembedded"}
azure-mgmt-purview = {develop=true, path = "sdk/purview/azure-mgmt-purview"}
azure-mgmt-quantum = {develop=true, path = "sdk/quantum/azure-mgmt-quantum"}
azure-mgmt-rdbms = {develop=true, path = "sdk/rdbms/azure-mgmt-rdbms"}
azure-mgmt-recoveryservices = {develop=true, path = "sdk/recoveryservices/azure-mgmt-recoveryservices"}
azure-mgmt-recoveryservicesbackup = {develop=true, path = "sdk/recoveryservices/azure-mgmt-recoveryservicesbackup"}
azure-mgmt-redhatopenshift = {develop=true, path = "sdk/redhatopenshift/azure-mgmt-redhatopenshift"}
azure-mgmt-redis = {develop=true, path = "sdk/redis/azure-mgmt-redis"}
azure-mgmt-redisenterprise = {develop=true, path = "sdk/redisenterprise/azure-mgmt-redisenterprise"}
azure-mgmt-regionmove = {develop=true, path = "sdk/regionmove/azure-mgmt-regionmove"}
azure-mgmt-relay = {develop=true, path = "sdk/relay/azure-mgmt-relay"}
azure-mgmt-reservations = {develop=true, path = "sdk/reservations/azure-mgmt-reservations"}
azure-mgmt-resourcemover = {develop=true, path = "sdk/resourcemover/azure-mgmt-resourcemover"}
azure-mgmt-msi = {develop=true, path = "sdk/resources/azure-mgmt-msi"}
azure-mgmt-resource = {develop=true, path = "sdk/resources/azure-mgmt-resource"}
azure-mgmt-resourcegraph = {develop=true, path = "sdk/resources/azure-mgmt-resourcegraph"}
azure-mgmt-scheduler = {develop=true, path = "sdk/scheduler/azure-mgmt-scheduler"}
azure-schemaregistry = {develop=true, path = "sdk/schemaregistry/azure-schemaregistry"}
azure-mgmt-search = {develop=true, path = "sdk/search/azure-mgmt-search"}
azure-search-documents = {develop=true, path = "sdk/search/azure-search-documents"}
azure-search-nspkg = {develop=true, path = "sdk/search/azure-search-nspkg"}
azure-mgmt-security = {develop=true, path = "sdk/security/azure-mgmt-security"}
azure-security-nspkg = {develop=true, path = "sdk/security/azure-security-nspkg"}
azure-mgmt-securityinsight = {develop=true, path = "sdk/securityinsight/azure-mgmt-securityinsight"}
azure-mgmt-serialconsole = {develop=true, path = "sdk/serialconsole/azure-mgmt-serialconsole"}
azure-mgmt-servermanager = {develop=true, path = "sdk/servermanager/azure-mgmt-servermanager"}
azure-mgmt-servicebus = {develop=true, path = "sdk/servicebus/azure-mgmt-servicebus"}
azure-servicebus = {develop=true, path = "sdk/servicebus/azure-servicebus"}
azure-mgmt-servicefabric = {develop=true, path = "sdk/servicefabric/azure-mgmt-servicefabric"}
azure-servicefabric = {develop=true, path = "sdk/servicefabric/azure-servicefabric"}
azure-mgmt-servicefabricmanagedclusters = {develop=true, path = "sdk/servicefabricmanagedclusters/azure-mgmt-servicefabricmanagedclusters"}
azure-mgmt-signalr = {develop=true, path = "sdk/signalr/azure-mgmt-signalr"}
azure-mgmt-sql = {develop=true, path = "sdk/sql/azure-mgmt-sql"}
azure-mgmt-sqlvirtualmachine = {develop=true, path = "sdk/sql/azure-mgmt-sqlvirtualmachine"}
azure-mgmt-storage = {develop=true, path = "sdk/storage/azure-mgmt-storage"}
azure-mgmt-storagecache = {develop=true, path = "sdk/storage/azure-mgmt-storagecache"}
azure-mgmt-storageimportexport = {develop=true, path = "sdk/storage/azure-mgmt-storageimportexport"}
azure-mgmt-storagesync = {develop=true, path = "sdk/storage/azure-mgmt-storagesync"}
azure-storage-blob = {develop=true, path = "sdk/storage/azure-storage-blob"}
azure-storage-blob-changefeed = {develop=true, path = "sdk/storage/azure-storage-blob-changefeed"}
azure-storage-file-datalake = {develop=true, path = "sdk/storage/azure-storage-file-datalake"}
azure-storage-file-share = {develop=true, path = "sdk/storage/azure-storage-file-share"}
azure-storage-nspkg = {develop=true, path = "sdk/storage/azure-storage-nspkg"}
azure-storage-queue = {develop=true, path = "sdk/storage/azure-storage-queue"}
azure-mgmt-streamanalytics = {develop=true, path = "sdk/streamanalytics/azure-mgmt-streamanalytics"}
azure-mgmt-subscription = {develop=true, path = "sdk/subscription/azure-mgmt-subscription"}
azure-mgmt-support = {develop=true, path = "sdk/support/azure-mgmt-support"}
azure-mgmt-synapse = {develop=true, path = "sdk/synapse/azure-mgmt-synapse"}
azure-synapse = {develop=true, path = "sdk/synapse/azure-synapse"}
azure-synapse-accesscontrol = {develop=true, path = "sdk/synapse/azure-synapse-accesscontrol"}
azure-synapse-artifacts = {develop=true, path = "sdk/synapse/azure-synapse-artifacts"}
azure-synapse-managedprivateendpoints = {develop=true, path = "sdk/synapse/azure-synapse-managedprivateendpoints"}
azure-synapse-monitoring = {develop=true, path = "sdk/synapse/azure-synapse-monitoring"}
azure-synapse-nspkg = {develop=true, path = "sdk/synapse/azure-synapse-nspkg"}
azure-synapse-spark = {develop=true, path = "sdk/synapse/azure-synapse-spark"}
azure-data-tables = {develop=true, path = "sdk/tables/azure-data-tables"}
azure-template = {develop=true, path = "sdk/template/azure-template"}
azure-ai-textanalytics = {develop=true, path = "sdk/textanalytics/azure-ai-textanalytics"}
azure-mgmt-timeseriesinsights = {develop=true, path = "sdk/timeseriesinsights/azure-mgmt-timeseriesinsights"}
azure-mgmt-trafficmanager = {develop=true, path = "sdk/trafficmanager/azure-mgmt-trafficmanager"}
azure-mgmt-workloadmonitor = {develop=true, path = "sdk/workloadmonitor/azure-mgmt-workloadmonitor"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
