[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-sdk-for-python"
version = "1.0.0"
description = "Azure SDK for Python - Meta package for installing all Azure SDK packages"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Microsoft Corporation", email = "azpysdkhelp@microsoft.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
keywords = ["azure", "azure sdk"]

[project.urls]
Homepage = "https://github.com/Azure/azure-sdk-for-python"
Repository = "https://github.com/Azure/azure-sdk-for-python"
Documentation = "https://docs.microsoft.com/python/azure/"

[tool.setuptools]
py-modules = []
